SYKFPT-1061: 最终交付：完善云原生适配、优化 P2P 策略、补充高覆盖率边缘测试用例及全量文档